# obsidianportal-git-sync

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  openapi.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish-main.yml  semantic-release.yml  sync-from-portal.yml
metadata/: ddb-sheet.css
metadata/dst/sindrel-beyond/: README.md  css.css  fields.yaml  html_template.html  javascript.js  sample-dynamic_sheet.json
scripts/: get_obsidian_tokens.py  list_obsidian_campaigns.py  lore_pull.sh
src/lore_bridge/: __init__.py  app.py  cli.py  client.py  dashboard.py  dashboard_config.py  dashboard_defaults.py  git_ops.py
src/lore_bridge/dndbeyond/: __init__.py  fetch.py  gm.py  mapper.py  render.py  sync.py
src/lore_bridge/dndbeyond/templates/: gm-features.html  sheet.html  spellcasting.html
